@@ -1,4 +1,5 @@
 v0.13.1
+    * FIX : Reflect in dirty dock the fact that multiple objects were changed together (fixes #1507)
 	* ADD : Threaded browser-based background image grabbing. (fixes #1312)
 v0.13
     * FIX : Workaround for a crash with templates on Qt 4.5
